[package]
name = "iced_chive"
version = "0.1.0"
authors = ["Prashant Bhushan Singh <prashant.bhushansingh@gmail.com>"]
edition = "2018"


[dependencies]
log = "0.4"
env_logger = "0.7"

iced = { git="https://github.com/hecrj/iced.git", features = ["image", "debug", "tokio"] }
iced_futures = { git="https://github.com/hecrj/iced.git" }
iced_native = { git="https://github.com/hecrj/iced.git" }
tokio = { version = "0.2", features = ["time", "sync", "fs"] }

rand = "0.7"
lazy_static = "1.4"
anyhow = "1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1